website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: website
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ghcr.io/orion-beauny-sugot/website:0.0.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8081
            initialDelaySeconds: 1
            periodSeconds: 1
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8081
            initialDelaySeconds: 1
            periodSeconds: 1
