website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  namespace: website
spec:
  tls:
    - hosts:
        - orion-beauny-sugot.com
      secretName: server-tls
  rules:
    - host: orion-beauny-sugot.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: server
                port:
                  number: 8080
